--- a/notebook/2-text2sql.ipynb
+++ b/notebook/2-text2sql.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "42368ce7",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,8 @@
     "import psycopg2\n",
     "import instructor\n",
     "from pydantic import BaseModel\n",
-    "\n",
+    "import openai\n",
+    "import sqlvalidator\n",
     "from langchain_community.utilities import SQLDatabase\n",
     "from langchain.chains import create_sql_query_chain"
    ]
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "de0a83e4",
    "metadata": {},
    "outputs": [],
@@ -67,25 +68,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "ed758942",
    "metadata": {},
    "outputs": [],
    "source": [
     "class SQLQuery(BaseModel):\n",
-    "    query: str"
+    "    query: str\n",
+    "\n",
+    "\n",
+    "class RAGGenerationResponse(BaseModel):\n",
+    "    answer: str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "id": "17e86fbd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Text2Sql\n",
     "\n",
-    "query = \"What is the top 5 attraction location in the US?\"\n",
+    "query = \"What is the top 5 attraction location in the US based on ratings?\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "You are given a database schema:\n",
@@ -115,6 +120,8 @@
     "\n",
     "Write SQL query using the \"public\" schema for all tables (e.g., public.us_attraction).\n",
     "\n",
+    "Response should only be a safe SQL query\n",
+    "\n",
     "\"\"\"\n",
     "\n",
     "# print(prompt)"
@@ -122,13 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "id": "42326512",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Instructor Version\n",
+    "\n",
     "response, raw_response = client.chat.completions.create_with_completion(\n",
-    "    model=\"gpt-4.1\",\n",
+    "    model=\"gpt-4.1-mini\",\n",
     "    response_model=SQLQuery,\n",
     "    messages=[{\"role\":\"user\", \"content\": prompt}],\n",
     "    temperature=0\n",
@@ -137,27 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "5cd0767e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# raw_response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "id": "5a47552d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SQLQuery(query='SELECT name, city, state, rating, reviews, weighted_score\\nFROM public.us_attractions\\nORDER BY weighted_score DESC\\nLIMIT 5;')"
+       "SQLQuery(query='SELECT name, city, state, rating, reviews FROM public.us_attractions ORDER BY rating DESC, reviews DESC LIMIT 5;')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,17 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "id": "543387c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'SELECT name, city, state, rating, reviews, weighted_score \\nFROM public.us_attraction\\nORDER BY weighted_score DESC\\nLIMIT 5;'"
+       "'SELECT name, city, state, rating FROM public.us_attractions ORDER BY rating DESC LIMIT 5;'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +188,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
+   "id": "ea7bcab5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parsed = sqlvalidator.parse(response.query)\n",
+    "parsed.is_valid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e5f51fe2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OpenAI\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "    temperature=0.,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "a7455fad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'```sql\\nSELECT name, city, state, rating\\nFROM public.us_attractions\\nORDER BY rating DESC\\nLIMIT 5;\\n```'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "814defbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parsed = sqlvalidator.parse(response.choices[0].message.content)\n",
+    "parsed.is_valid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "7cb5ca4c",
    "metadata": {},
    "outputs": [],
@@ -206,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "id": "17dbe251",
    "metadata": {},
    "outputs": [
@@ -214,11 +293,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Central Park', 'New-york-city', 'NY', 4.8, 272065.0, 1305912.0)\n",
-      "('Magic Kingdom Park', 'Orlando', 'FL', 4.6, 221929.0, 1020873.4)\n",
-      "('Universal Orlando Resort', 'Orlando', 'FL', 4.7, 178775.0, 840242.5)\n",
-      "('Rockefeller Center', 'New-york-city', 'NY', 4.7, 175156.0, 823233.2)\n",
-      "('Universal Studios Hollywood', 'Los-angeles', 'CA', 4.6, 153543.0, 706297.8)\n"
+      "('American Legacy Tours', 'Cincinnati', 'OH', 5.0, 3249.0)\n",
+      "('Far Shot Albany', 'Albany', 'NY', 5.0, 2830.0)\n",
+      "('Axehole Vegas | Axe Throwing Bar', 'Las-vegas', 'NV', 5.0, 2653.0)\n",
+      "('Immersive Gamebox - 9+CO Denver', 'Denver', 'CO', 5.0, 2052.0)\n",
+      "('Buffalo Double Decker Tours', 'Buffalo', 'NY', 5.0, 1626.0)\n"
      ]
     }
    ],
@@ -230,6 +309,83 @@
     "\n",
     "for row in rows:\n",
     "    print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1af11059",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "formatted_rows = \"\\n\".join([\", \".join(map(str, row)) for row in rows])\n",
+    "# print(formatted_rows)\n",
+    "\n",
+    "# Create a prompt for the LLM\n",
+    "\n",
+    "prompt = f'''Here are the query results:\\n{formatted_rows}\n",
+    "\n",
+    "Generated by this SQL query: {generated_sql}\\n\n",
+    "'''\n",
+    "if query:\n",
+    "    prompt += f\"Based on these results, answer the question: {query}\"\n",
+    "\n",
+    "# print(prompt)\n",
+    "\n",
+    "# response, raw_response = client.chat.completions.create_with_completion(\n",
+    "#     model=\"gpt-4.1-mini\",\n",
+    "#     response_model=RAGGenerationResponse,\n",
+    "#     messages=[{\"role\":\"user\", \"content\": prompt}],\n",
+    "#     temperature=0\n",
+    "# )\n",
+    "\n",
+    "response = openai.chat.completions.create(\n",
+    "        model=\"gpt-4.1-mini\",\n",
+    "        messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "        temperature=0.5,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8ccedbd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The top 5 attraction locations in the US based on rating and number of reviews are:\\n1. American Legacy Tours, Cincinnati, OH\\n2. Far Shot Albany, Albany, NY\\n3. Axehole Vegas | Axe Throwing Bar, Las Vegas, NV\\n4. Immersive Gamebox - 9+CO Denver, Denver, CO\\n5. Buffalo Double Decker Tours, Buffalo, NY'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5683bd52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Based on the query results, the top 5 attraction locations in the US, ranked by rating (all 5.0) and then by number of reviews (highest first), are:\\n\\n1. American Legacy Tours, Cincinnati, OH (5.0 rating, 3249 reviews)  \\n2. Far Shot Albany, Albany, NY (5.0 rating, 2830 reviews)  \\n3. Axehole Vegas | Axe Throwing Bar, Las Vegas, NV (5.0 rating, 2653 reviews)  \\n4. Immersive Gamebox - 9+CO Denver, Denver, CO (5.0 rating, 2052 reviews)  \\n5. Buffalo Double Decker Tours, Buffalo, NY (5.0 rating, 1626 reviews)  \\n\\nThese are the top 5 attractions based on the highest ratings and number of reviews in the US.'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.choices[0].message.content"
    ]
   },
   {
