added vector embeddings

--- a/notebook/1-eda.ipynb
+++ b/notebook/1-eda.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "id": "d02b0afc",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,25 @@
     "import pandas as pd\n",
     "import psycopg2\n",
     "import psycopg2.extras as extras\n",
-    "import math"
+    "import math\n",
+    "import openai \n",
+    "from pgvector.psycopg2 import register_vector\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "id": "bbe33f87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "3082cc7d",
    "metadata": {},
    "outputs": [],
@@ -33,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "b1276ec5",
    "metadata": {},
    "outputs": [
@@ -201,7 +214,7 @@
        "4  Atlanta, Augusta, Chattanooga, Savannah  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "id": "51ee36f0",
    "metadata": {},
    "outputs": [
@@ -220,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('PostgreSQL 16.10 on x86_64-pc-linux-musl, compiled by gcc (Alpine 14.2.0) 14.2.0, 64-bit',)\n"
+      "('PostgreSQL 16.10 (Debian 16.10-1.pgdg12+1) on x86_64-pc-linux-gnu, compiled by gcc (Debian 12.2.0-14+deb12u1) 12.2.0, 64-bit',)\n"
      ]
     }
    ],
@@ -240,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "be793fcd",
    "metadata": {},
    "outputs": [
@@ -265,6 +278,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
        "      <th>name</th>\n",
        "      <th>main_category</th>\n",
        "      <th>rating</th>\n",
@@ -284,6 +298,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Forsyth Park</td>\n",
        "      <td>Park</td>\n",
        "      <td>4.8</td>\n",
@@ -301,6 +316,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>The Cathedral Basilica of St. John the Baptist</td>\n",
        "      <td>Catholic cathedral</td>\n",
        "      <td>4.8</td>\n",
@@ -318,6 +334,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Fort Pulaski National Monument</td>\n",
        "      <td>Monument</td>\n",
        "      <td>4.8</td>\n",
@@ -335,6 +352,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Fountain at Forsyth Park</td>\n",
        "      <td>Historical landmark</td>\n",
        "      <td>4.8</td>\n",
@@ -352,6 +370,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Wormsloe State Historic Site</td>\n",
        "      <td>Historical place museum</td>\n",
        "      <td>4.5</td>\n",
@@ -372,19 +391,26 @@
        "</div>"
       ],
       "text/plain": [
-       "                                             name            main_category  \\\n",
-       "0                                    Forsyth Park                     Park   \n",
-       "1  The Cathedral Basilica of St. John the Baptist       Catholic cathedral   \n",
-       "2                  Fort Pulaski National Monument                 Monument   \n",
-       "3                        Fountain at Forsyth Park      Historical landmark   \n",
-       "4                    Wormsloe State Historic Site  Historical place museum   \n",
+       "   id                                            name  \\\n",
+       "0   0                                    Forsyth Park   \n",
+       "1   1  The Cathedral Basilica of St. John the Baptist   \n",
+       "2   2                  Fort Pulaski National Monument   \n",
+       "3   3                        Fountain at Forsyth Park   \n",
+       "4   4                    Wormsloe State Historic Site   \n",
        "\n",
-       "   rating  reviews                                         categories  \\\n",
-       "0     4.8  16538.0                           Park, Tourist attraction   \n",
-       "1     4.8   5911.0  Catholic cathedral, Catholic church, Tourist a...   \n",
-       "2     4.8   5221.0  Monument, Historical place, Historical landmar...   \n",
-       "3     4.8   4234.0            Historical landmark, Tourist attraction   \n",
-       "4     4.5   3615.0  Historical place museum, Museum, Park, State park   \n",
+       "             main_category  rating  reviews  \\\n",
+       "0                     Park     4.8  16538.0   \n",
+       "1       Catholic cathedral     4.8   5911.0   \n",
+       "2                 Monument     4.8   5221.0   \n",
+       "3      Historical landmark     4.8   4234.0   \n",
+       "4  Historical place museum     4.5   3615.0   \n",
+       "\n",
+       "                                          categories  \\\n",
+       "0                           Park, Tourist attraction   \n",
+       "1  Catholic cathedral, Catholic church, Tourist a...   \n",
+       "2  Monument, Historical place, Historical landmar...   \n",
+       "3            Historical landmark, Tourist attraction   \n",
+       "4  Historical place museum, Museum, Park, State park   \n",
        "\n",
        "                                             address      city country state  \\\n",
        "0                   Forsyth Park, Savannah, GA 31401  Savannah     USA    GA   \n",
@@ -408,24 +434,26 @@
        "4  Atlanta, Augusta, Chattanooga, Savannah  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = df.reset_index(names=[\"id\"])\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "7cd8b647",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "id                    int64\n",
        "name                 object\n",
        "main_category        object\n",
        "rating              float64\n",
@@ -443,7 +471,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "04c9f5d6",
    "metadata": {},
    "outputs": [],
@@ -470,6 +498,7 @@
     "# Create table SQL – example with basic types to match DataFrame columns\n",
     "create_table_query = '''\n",
     "CREATE TABLE IF NOT EXISTS us_attractions (\n",
+    "    id INTEGER PRIMARY KEY,\n",
     "    name VARCHAR(250),\n",
     "    main_category VARCHAR(250),\n",
     "    rating REAL,\n",
@@ -513,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "39504613",
    "metadata": {},
    "outputs": [],
@@ -541,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "af667b21",
    "metadata": {},
    "outputs": [],
@@ -551,7 +580,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
+   "id": "7c4558db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Create vector embeddings of existing records\n",
+    "\n",
+    "register_vector(conn)\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "# Fetch records that need embedding\n",
+    "cur.execute(\"SELECT id, name, categories, address, country, broader_category FROM us_attractions\")\n",
+    "rows = cur.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    id = row[0]\n",
+    "    text = ','.join(map(str, row[1:]))\n",
+    "\n",
+    "    # Call OpenAI embedding API (example)\n",
+    "    response = openai.embeddings.create(\n",
+    "        input=[text],\n",
+    "        model=\"text-embedding-3-small\"\n",
+    "    )\n",
+    "    embedding = response.data[0].embedding\n",
+    "    \n",
+    "    # # Update record with embedding\n",
+    "    cur.execute(\n",
+    "        \"UPDATE us_attractions SET embedding = %s WHERE id = %s \",\n",
+    "        (embedding, id)\n",
+    "    )\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "919e35bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = rows[0]\n",
+    "id = row[0]\n",
+    "text = ','.join(map(str, row[1:]))\n",
+    "# print(text)\n",
+    "# Call OpenAI embedding API (example)\n",
+    "response = openai.embeddings.create(\n",
+    "    input=[text],\n",
+    "    model=\"text-embedding-3-small\"\n",
+    ")\n",
+    "embedding = response.data[0].embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1d637d3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1536"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(embedding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "266d4d01",
    "metadata": {},
    "outputs": [],
