--- a/notebook/2-text2sql.ipynb
+++ b/notebook/2-text2sql.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "id": "42368ce7",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "88005c5b",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "e774dad6",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "de0a83e4",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "ed758942",
    "metadata": {},
    "outputs": [],
@@ -83,14 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "id": "17e86fbd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Text2Sql\n",
     "\n",
-    "query = \"What is the top 5 attraction location in the US based on ratings?\"\n",
+    "# query = \"What is the top 5 attraction location in the US based on ratings?\"\n",
+    "# query = \"I want a list of all aquariums in the listed US cities.\"\n",
+    "# query = \"Are there any amusement or water parks in Charlotte, NC?\"\n",
+    "# query = \"Which cities have more than three parks listed in your database?\"\n",
+    "query = \"What attractions in Charleston, SC are related to US Civil War history?\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "You are given a database schema:\n",
@@ -118,9 +122,10 @@
     "\n",
     "\"{query}\"\n",
     "\n",
-    "Write SQL query using the \"public\" schema for all tables (e.g., public.us_attraction).\n",
-    "\n",
-    "Response should only be a safe SQL query\n",
+    "Instructions:\n",
+    "- Write SQL query using the \"public\" schema for all tables (e.g., public.us_attraction).\n",
+    "- Response should only be a safe SQL query\n",
+    "- When making string comparisons, make sure to perform lower case\n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -129,7 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
+   "id": "f2841f8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_structured_query(query: str) -> bool:\n",
+    "    structured_keywords = [\n",
+    "        \"select\", \"count\", \"list\", \"find\", \"show\", \"where\", \"when\", \"which\",\n",
+    "        \"how many\", \"exactly\", \"order by\", \"group by\", \"price\", \"location\", \"category\"\n",
+    "    ]\n",
+    "    query_lower = query.lower()\n",
+    "    return any(keyword in query_lower for keyword in structured_keywords)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "42326512",
    "metadata": {},
    "outputs": [],
@@ -146,17 +167,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "id": "a4075148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example to perform vector similarity queries\n",
+    "\n",
+    "query_embedding = [0.1, 0.2, ..., 0.3]\n",
+    "cur.execute(\n",
+    "  \"SELECT * FROM your_table ORDER BY embedding <-> %s LIMIT 5\",\n",
+    "  (query_embedding,)\n",
+    ")\n",
+    "results = cur.fetchall()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "5a47552d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SQLQuery(query='SELECT name, city, state, rating, reviews FROM public.us_attractions ORDER BY rating DESC, reviews DESC LIMIT 5;')"
+       "SQLQuery(query=\"SELECT name, city FROM public.us_attractions WHERE main_category = 'Aquarium';\")"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,17 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "id": "543387c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'SELECT name, city, state, rating FROM public.us_attractions ORDER BY rating DESC LIMIT 5;'"
+       "\"SELECT * FROM public.us_attractions WHERE lower(city) = 'charleston' AND lower(state) = 'sc' AND (lower(main_category) LIKE '%civil war%' OR lower(categories) LIKE '%civil war%' OR lower(broader_category) LIKE '%civil war%')\""
       ]
      },
-     "execution_count": 59,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "7cb5ca4c",
    "metadata": {},
    "outputs": [],
