--- a/notebook/2-text2sql.ipynb
+++ b/notebook/2-text2sql.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "00e67fb7",
    "metadata": {},
    "outputs": [],
@@ -556,7 +556,7 @@
     "\n",
     "\n",
     "def execute_sql_similarity_match(cursor, input_embedding, top_k=5):\n",
-    "    vector_search_sql = \"SELECT * FROM attraction_table ORDER BY embedding <-> %s::vector LIMIT %s\"\n",
+    "    vector_search_sql = \"SELECT * FROM us_attractions ORDER BY embedding <-> %s::vector LIMIT %s\"\n",
     "    cursor.execute(vector_search_sql, (input_embedding, top_k))\n",
     "    rows = cursor.fetchall()\n",
     "    return rows"
